Possible fixes for div overlap, baby!

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -179,7 +179,6 @@
 
 .post-list {
     margin-left: 0;
-    list-style: none;
 
     > .post-item {
         border: 0px solid black;
